--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "prod": "webpack --config webpack.config.prod.js"
   },
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "bootstrap": "^3.3.7",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
